--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.7",
         "laraveles/spanish": "^1.5",
-        "rap2hpoutre/laravel-log-viewer": "^2.3"
+        "rap2hpoutre/laravel-log-viewer": "^2.3",
+        "spatie/laravel-permission": "^6.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
