--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.7",
         "laraveles/spanish": "^1.5",
+        "maatwebsite/excel": "^3.1",
         "rap2hpoutre/laravel-log-viewer": "^2.3",
         "spatie/laravel-permission": "^6.7"
     },
