--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.7",
         "laraveles/spanish": "^1.5",
         "maatwebsite/excel": "^3.1",
+        "madnest/madzipper": "^1.3",
         "rap2hpoutre/laravel-log-viewer": "^2.3",
         "spatie/laravel-permission": "^6.7"
     },
